Move Login Logo down Slightly to Prevent Header Cutoff

--- a/src/pages/loginPage/loginPage.css
+++ b/src/pages/loginPage/loginPage.css
@@ -14,7 +14,6 @@
   }
   
   .login-container img {
-    margin-bottom: 20px;
     width: 70%;
     max-width: 300px;
   }
